# openadapt-evals

./: .gitignore  CHANGELOG.md  CLAUDE.md  PHASE0_TASKS.txt  README.md  SIMPLICITY_PRINCIPLES.md  check_monitor_status.sh  cost_report.json  demo_validation_cost_analysis.py  demo_validation_cost_report.json  live_viewer.html  monitor_and_validate.sh  openadapt-ml-migration-analysis.md  pyproject.toml  run_baseline.sh  run_demo_test.sh  run_full_validation.sh  test_demo_persistence.py  test_execution_logs.py  test_integration.py  test_metrics_analysis.py  test_vm_setup.sh
.beads/: beads.db  beads.db-shm  beads.db-wal  issues.jsonl  last-touched  sync-state.json
.claude/worktrees/: openadapt-capture  openadapt-ml
.github/workflows/: publish.yml  release.yml  test.yml
animations/: ANIMATION_SUMMARY.md
annotated_demos/: 04d9aeaf-7bed-4024-bedb-e10e6f00eb7f-WOS.txt  0bf05a7d-b28b-44d2-955a-50b41e24012a-WOS.json  0e763496-b6bb-4508-a427-fad0b6c3e195-WOS.json  0e763496-b6bb-4508-a427-fad0b6c3e195-WOS.txt  70745df8-f2f5-42bd-8074-fbc10334fcc5-2-WOS.json  70745df8-f2f5-42bd-8074-fbc10334fcc5-2-WOS.txt
annotated_demos_core4/: 04d9aeaf-7bed-4024-bedb-e10e6f00eb7f-WOS.json  0bf05a7d-b28b-44d2-955a-50b41e24012a-WOS.txt
archive/: DOCKER_WAA_DESIGN_REVIEW.md  README.md  VM_SETUP_COMMAND.md  WAA_RELIABILITY_PLAN.md
configs/: areal_waa_grpo.yaml  train_waa_vagen.yaml
demo_library/: demos.json
demo_prompts/: 04d9aeaf-7bed-4024-bedb-e10e6f00eb7f-WOS.txt  0c9dda13-428c-492b-900b-f48562111f93-WOS.txt  366de66e-cbae-4d72-b042-26390db2b145-WOS.txt  37e10fc4-b4c5-4b02-a65c-bfae8bc51d3f-wos.txt
demo_prompts_vlm/: 04d9aeaf-7bed-4024-bedb-e10e6f00eb7f-WOS.txt  04d9aeaf-7bed-4024-bedb-e10e6f00eb7f-WOS_multilevel.txt
demos/custom-clear-chrome-data/: demo.json
docs/: GRPO_TROUBLESHOOTING.md  RECURRING_ISSUES.md  STANDALONE_VS_TRL_COMPARISON.md  TELEMETRY.md  WAA_DOCKER_IMAGE_DESIGN.md  WAA_INTEGRATION_GUIDE.md  agent_improvement_options.md  demo_review.md  ec2_setup_guide.md  eval_analysis_2026_03_02.md  eval_results_v2.md  failure_mode_analysis.md  grpo_training_research_2026_03_17.md  resilience-options.md  revert_plan.md  rl_quick_start.md  spot_instance_analysis.md  task_navigational_ambiguity_analysis.md  training_runbook.md  verl_agent_decision.md  waa_execution_parity_plan.md
docs/cost/: COST_OPTIMIZATION.md  LLM_AGENT_ECONOMICS.md
docs/demo/: DEMO_AUGMENTATION_STRATEGY.md  DEMO_TEST_DELIVERABLES.md  DEMO_TEST_INDEX.md  DEMO_TEST_PLAN.md  DEMO_TEST_QUICKSTART.md  DEMO_TEST_README.md  DEMO_TEST_SUMMARY.md  DEMO_VALIDATION_ANALYSIS_REPORT.md  DEMO_VALIDATION_EXECUTIVE_SUMMARY.md
docs/design/: api_gui_hybrid_and_dense_rewards.md  custom_task_evaluation.md  experiment_framework.md  grounding_cascade_design.md  grounding_cascade_design_v2.md  grounding_cascade_design_v3.md  hybrid_agent_architecture.md  repo_organization.md  roi_and_cost_analysis.md  track2_ralph_prompt.txt  trl_grpo_integration.md  vm_pool_optimization.md  workflow_extraction_pipeline.md
docs/eval_results/: 2026-02-19_zero_shot_vs_demo_conditioned.md  2026-02-21_zero_shot_vs_demo_conditioned.md  2026-03-28_correction_flywheel_validation.md  comparison.html  comparison_generated.html  eval_analysis_04d9aeaf.md
docs/gpu_e2e_validation/: README.md  architecture.md
docs/implementation/: IMPLEMENTATION_SUMMARY_DASHBOARD.md
example_comparisons/: api_models.yaml  unified_agents.yaml
example_tasks/: calc-formula.yaml  chrome-auto-delete-site-data.yaml  clear-browsing-data-chrome.yaml  clear-browsing-data-edge.yaml  clear-youtube-history.yaml  create-desktop-folder.yaml  notepad-hello.yaml
examples/: http_agent_server.py
grpo_output/: mock_results.json
openadapt_evals/: __init__.py  annotation.py  config.py  constants.py  correction_capture.py  correction_parser.py  correction_store.py  cost_tracker.py  demo_controller.py  demo_library.py  grounding.py  plan_verify.py  task_config.py  telemetry.py  vlm.py  vlm_evaluator.py
screenshots/: manifest.json
scripts/: .record_waa_demos.py.swp  __init__.py  analyze_demo_results.py  collect_distillation_data.py  compare_models.py  configure_vm_auto_shutdown.sh  convert_recording_to_demo.py  core4_eval.py  core4_lane.py  create_manual_demo.py  enrich_demo_targets.py  eval_checkpoint.py  finetune_distilled.py  generate_demo_review.py  generate_trace_report.py  generate_viewer_animation.py  gpu_cli.py  phase0_analyze.py  phase0_budget.py  phase0_dashboard.py  phase0_runner.py  phase0_runner.sh  phase0_status.sh  phase0_test.sh  record_demo_screenshots.py  record_waa_demos.py  refine_demo.py  run_correction_flywheel.py  run_dc_eval.py  run_demo_test.sh  run_eval_pipeline.py  run_full_eval.py  run_grpo_rollout.py  run_planner_grounder.py  serve_grounder.sh  serve_ui_venus.sh  setup_gpu_training.sh  sglang_server.py  test_verl_env_e2e.py  train_grpo_example.py  (+7 more)
tests/: test_alignment_strategy.py  test_annotation.py  test_api_agent_ml.py  test_api_agent_p0_fix.py  test_api_agent_parsing.py  test_areal_workflow.py  test_claude_computer_use_agent.py  test_correction_flywheel.py  test_cost_optimization.py  test_cost_tracker.py  test_demo_controller.py  test_demo_executor_e2e.py  test_demo_executor_http_grounder.py  test_demo_library_enrichment.py  test_demo_persistence.py  test_demo_visual_alignment.py  test_dense_rewards.py  test_eval_pipeline.py  test_evaluate_endpoint.py  test_evaluate_server_deploy.py  test_generate_trace_report.py  test_grounding.py  test_http_agent.py  test_lightweight_install.py  test_lightweight_trace_export.py  test_local_adapter.py  test_metrics.py  test_milestone_screenshot_eval.py  test_mock_adapter.py  test_observe_pil.py  test_openenv.py  test_phase0_integration.py  test_pixel_action.py  test_plan_verify.py  test_planner_cache.py  test_planner_grounder_agent.py  test_probe.py  test_qemu_reset.py  test_quota_auto_detection.py  test_qwen3vl_agent.py  (+29 more)
waa_recordings_core4/: 04d9aeaf-7bed-4024-bedb-e10e6f00eb7f-WOS  0bf05a7d-b28b-44d2-955a-50b41e24012a-WOS  0e763496-b6bb-4508-a427-fad0b6c3e195-WOS  70745df8-f2f5-42bd-8074-fbc10334fcc5-2-WOS
(+222 files in other folders)
