[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openadapt-evals"
version = "0.48.1"
description = "Evaluation infrastructure for GUI agent benchmarks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Richard Abrich", email = "richard@openadapt.ai"}
]
maintainers = [
    {name = "OpenAdaptAI", email = "contact@openadapt.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
keywords = ["gui", "automation", "evaluation", "benchmark", "agent", "ai"]

dependencies = [
    "pillow>=10.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "tenacity>=8.2.0",
    "requests>=2.28.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "anthropic>=0.76.0",
    "openadapt-consilium>=0.3.2",
    "openadapt-telemetry>=0.2.0",
    "openadapt-ml>=0.11.0",
]

[project.scripts]
oa = "openadapt_evals.cli.main:main"
# Legacy entry point (kept for backward compatibility)
openadapt-evals = "openadapt_evals.benchmarks.cli:main"
# VM/pool infrastructure CLI (migrated from openadapt-ml)
oa-vm = "openadapt_evals.benchmarks.vm_cli:main"

[project.urls]
Homepage = "https://github.com/OpenAdaptAI/openadapt-evals"
Repository = "https://github.com/OpenAdaptAI/openadapt-evals"
Documentation = "https://github.com/OpenAdaptAI/openadapt-evals#readme"
"Bug Tracker" = "https://github.com/OpenAdaptAI/openadapt-evals/issues"

[tool.uv.sources]
openadapt-consilium = { git = "https://github.com/OpenAdaptAI/openadapt-consilium.git" }

[tool.hatch.build.targets.wheel]
packages = ["openadapt_evals"]

[tool.ruff]
line-length = 100

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore: release {version}"
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
